dashboard video feed ui added

--- a/Dashboard/static/assets/libs/css/style.css
+++ b/Dashboard/static/assets/libs/css/style.css
@@ -6749,6 +6749,13 @@ form.dropzone {
 9.2 Vector Map
 ---------------------------*/
 
+.video-frame{
+    width: 50%;
+    display: block;
+    margin: 0 auto;
+}
+
+
 
 /*-------------------------------------------------------------------
 Media Query
