--- a/Dashboard/templates/includes/sidebar.html
+++ b/Dashboard/templates/includes/sidebar.html
@@ -12,19 +12,19 @@
                         Menu
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link active" href="#" aria-expanded="false" data-target="#submenu-1" aria-controls="submenu-1"><i class="fa fa-fw fa-user-circle"></i>Home</a>
+                        <a class="nav-link" href="/" aria-expanded="false" data-target="#submenu-1" aria-controls="submenu-1"><i class="fa fa-fw fa-user-circle"></i>Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" aria-expanded="false" data-target="#submenu-2" aria-controls="submenu-2"><i class="fa fa-fw fa-rocket"></i>Field Operation</a>
+                        <a class="nav-link" href="/field-operation" aria-expanded="false" data-target="#submenu-2" aria-controls="submenu-2"><i class="fa fa-fw fa-rocket"></i>Field Operation</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" aria-expanded="false" data-target="#submenu-3" aria-controls="submenu-3"><i class="fas fa-fw fa-chart-pie"></i>My Area Status</a>
+                        <a class="nav-link" href="/area-status" aria-expanded="false" data-target="#submenu-3" aria-controls="submenu-3"><i class="fas fa-fw fa-chart-pie"></i>My Area Status</a>
                     </li>
                     <li class="nav-item ">
-                        <a class="nav-link" href="#" aria-expanded="false" data-target="#submenu-4" aria-controls="submenu-4"><i class="fas fa-fw fa-map-marker-alt"></i>Area Map</a>
+                        <a class="nav-link" href="/area-map" aria-expanded="false" data-target="#submenu-4" aria-controls="submenu-4"><i class="fas fa-fw fa-map-marker-alt"></i>Area Map</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#" aria-expanded="false" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-table"></i>History</a>
+                        <a class="nav-link" href="/history" aria-expanded="false" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-table"></i>History</a>
                     </li>
                     <li class="nav-divider">
                         Documentation
