--- a/Dashboard/templates/index.html
+++ b/Dashboard/templates/index.html
@@ -49,9 +49,9 @@
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="text-muted">Total Revenue</h5>
+                                        <h5 class="text-muted">Area Scanned Last Week</h5>
                                         <div class="metric-value d-inline-block">
-                                            <h1 class="mb-1">$12099</h1>
+                                            <h1 class="mb-1">12.55 km<sup>2</sup></h1>
                                         </div>
                                         <div class="metric-label d-inline-block float-right text-success font-weight-bold">
                                             <span><i class="fa fa-fw fa-arrow-up"></i></span><span>5.86%</span>
@@ -63,9 +63,9 @@
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="text-muted">Affiliate Revenue</h5>
+                                        <h5 class="text-muted">New Crops Detected</h5>
                                         <div class="metric-value d-inline-block">
-                                            <h1 class="mb-1">$12099</h1>
+                                            <h1 class="mb-1">12</h1>
                                         </div>
                                         <div class="metric-label d-inline-block float-right text-success font-weight-bold">
                                             <span><i class="fa fa-fw fa-arrow-up"></i></span><span>5.86%</span>
@@ -77,7 +77,7 @@
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="text-muted">Refunds</h5>
+                                        <h5 class="text-muted">New Diseases</h5>
                                         <div class="metric-value d-inline-block">
                                             <h1 class="mb-1">0.00</h1>
                                         </div>
@@ -91,9 +91,9 @@
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
                                     <div class="card-body">
-                                        <h5 class="text-muted">Avg. Revenue Per User</h5>
+                                        <h5 class="text-muted">Average Growth Rate</h5>
                                         <div class="metric-value d-inline-block">
-                                            <h1 class="mb-1">$28000</h1>
+                                            <h1 class="mb-1">39.06%</h1>
                                         </div>
                                         <div class="metric-label d-inline-block float-right text-secondary font-weight-bold">
                                             <span>-2.00%</span>
@@ -108,79 +108,61 @@
                       
                             <!-- ============================================================== -->
 
-                                          <!-- recent orders  -->
+                            <!-- recent orders  -->
                             <!-- ============================================================== -->
                             <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
                                 <div class="card">
-                                    <h5 class="card-header">Recent Orders</h5>
+                                    <h5 class="card-header">Recent Area</h5>
                                     <div class="card-body p-0">
                                         <div class="table-responsive">
                                             <table class="table">
                                                 <thead class="bg-light">
                                                     <tr class="border-0">
                                                         <th class="border-0">#</th>
-                                                        <th class="border-0">Image</th>
-                                                        <th class="border-0">Product Name</th>
-                                                        <th class="border-0">Product Id</th>
-                                                        <th class="border-0">Quantity</th>
-                                                        <th class="border-0">Price</th>
-                                                        <th class="border-0">Order Time</th>
-                                                        <th class="border-0">Customer</th>
+                                                        <th class="border-0">Area Name</th>
+                                                        <th class="border-0">Area Id</th>
+                                                        <th class="border-0">Total Area (km<sup>2</sup>)</th>
+                                                        <th class="border-0">Scan Time</th>
+                                                        <th class="border-0">Officer<th>
                                                         <th class="border-0">Status</th>
                                                     </tr>
                                                 </thead>
                                                 <tbody>
                                                     <tr>
                                                         <td>1</td>
-                                                        <td>
-                                                            <div class="m-r-10"><img src="assets/images/product-pic.jpg" alt="user" class="rounded" width="45"></div>
-                                                        </td>
-                                                        <td>Product #1 </td>
+                                                        <td>Madhupur</td>
                                                         <td>id000001 </td>
                                                         <td>20</td>
-                                                        <td>$80.00</td>
                                                         <td>27-08-2018 01:22:12</td>
                                                         <td>Patricia J. King </td>
-                                                        <td><span class="badge-dot badge-brand mr-1"></span>InTransit </td>
+                                                        <td><span class="badge-dot badge-brand mr-1"></span> Yellow leaf detected </td>
                                                     </tr>
                                                     <tr>
                                                         <td>2</td>
-                                                        <td>
-                                                            <div class="m-r-10"><img src="assets/images/product-pic-2.jpg" alt="user" class="rounded" width="45"></div>
-                                                        </td>
-                                                        <td>Product #2 </td>
+                                                        <td>Madhupur</td>
                                                         <td>id000002 </td>
                                                         <td>12</td>
-                                                        <td>$180.00</td>
                                                         <td>25-08-2018 21:12:56</td>
                                                         <td>Rachel J. Wicker </td>
-                                                        <td><span class="badge-dot badge-success mr-1"></span>Delivered </td>
+                                                        <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
                                                     </tr>
                                                     <tr>
                                                         <td>3</td>
-                                                        <td>
-                                                            <div class="m-r-10"><img src="assets/images/product-pic-3.jpg" alt="user" class="rounded" width="45"></div>
-                                                        </td>
-                                                        <td>Product #3 </td>
+                                                        <td>Madhupur</td>
                                                         <td>id000003 </td>
                                                         <td>23</td>
-                                                        <td>$820.00</td>
                                                         <td>24-08-2018 14:12:77</td>
                                                         <td>Michael K. Ledford </td>
-                                                        <td><span class="badge-dot badge-success mr-1"></span>Delivered </td>
+                                                        <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
                                                     </tr>
                                                     <tr>
                                                         <td>4</td>
-                                                        <td>
-                                                            <div class="m-r-10"><img src="assets/images/product-pic-4.jpg" alt="user" class="rounded" width="45"></div>
-                                                        </td>
-                                                        <td>Product #4 </td>
+                                                        <td>Madhupur</td>
                                                         <td>id000004 </td>
                                                         <td>34</td>
-                                                        <td>$340.00</td>
                                                         <td>23-08-2018 09:12:35</td>
                                                         <td>Michael K. Ledford </td>
-                                                        <td><span class="badge-dot badge-success mr-1"></span>Delivered </td>
+                                                        <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
                                                     </tr>
                                                     <tr>
                                                         <td colspan="9"><a href="#" class="btn btn-outline-light float-right">View Details</a></td>
@@ -201,7 +183,7 @@
                             <!-- ============================================================== -->
                             <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
-                                    <h5 class="card-header">Customer Acquisition</h5>
+                                    <h5 class="card-header">Usage</h5>
                                     <div class="card-body">
                                         <div class="ct-chart ct-golden-section" style="height: 354px;"></div>
                                         <div class="text-center">
