--- a/Dashboard/templates/area_map.html
+++ b/Dashboard/templates/area_map.html
@@ -35,7 +35,8 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                        <!-- <h3 class="text-center">Content goes here!</h3> -->
+                        <div class="mapouter"><div class="gmap_canvas"><iframe width="1080" height="668" id="gmap_canvas" src="https://maps.google.com/maps?q=2880%20Broadway,%20New%20York&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://123movies-to.org"></a><br><style>.mapouter{position:relative;text-align:right;height:668px;width:1080px;}</style><a href="https://www.embedgooglemap.net">google maps plugin html</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:668px;width:1080px;}</style></div></div>
                     </div>
                 </div>
             </div>
