--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -35,7 +35,72 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                        <!-- <h3 class="text-center">Content goes here!</h3> -->
+
+                        <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
+                            <div class="card">
+                                <h5 class="card-header">Recent Area</h5>
+                                <div class="card-body p-0">
+                                    <div class="table-responsive">
+                                        <table class="table">
+                                            <thead class="bg-light">
+                                                <tr class="border-0">
+                                                    <th class="border-0">#</th>
+                                                    <th class="border-0">Area Name</th>
+                                                    <th class="border-0">Area Id</th>
+                                                    <th class="border-0">Total Area (km<sup>2</sup>)</th>
+                                                    <th class="border-0">Scan Time</th>
+                                                    <th class="border-0">Officer<th>
+                                                    <th class="border-0">Status</th>
+                                                </tr>
+                                            </thead>
+                                            <tbody>
+                                                <tr>
+                                                    <td>1</td>
+                                                    <td>Madhupur</td>
+                                                    <td>id000001 </td>
+                                                    <td>20</td>
+                                                    <td>27-08-2018 01:22:12</td>
+                                                    <td>Patricia J. King </td>
+                                                    <td><span class="badge-dot badge-brand mr-1"></span> Yellow leaf detected </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>2</td>
+                                                    <td>Madhupur</td>
+                                                    <td>id000002 </td>
+                                                    <td>12</td>
+                                                    <td>25-08-2018 21:12:56</td>
+                                                    <td>Rachel J. Wicker </td>
+                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>3</td>
+                                                    <td>Madhupur</td>
+                                                    <td>id000003 </td>
+                                                    <td>23</td>
+                                                    <td>24-08-2018 14:12:77</td>
+                                                    <td>Michael K. Ledford </td>
+                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
+                                                </tr>
+                                                <tr>
+                                                    <td>4</td>
+                                                    <td>Madhupur</td>
+                                                    <td>id000004 </td>
+                                                    <td>34</td>
+                                                    <td>23-08-2018 09:12:35</td>
+                                                    <td>Michael K. Ledford </td>
+                                                    <td><span class="badge-dot badge-success mr-1"></span>Yellow leaf detected </td>
+                                                </tr>
+                                                <tr>
+                                                    <td colspan="9"><a href="#" class="btn btn-outline-light float-right">View Details</a></td>
+                                                </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
                     </div>
                 </div>
             </div>
