--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -104,6 +104,29 @@
                     </div>
                 </div>
             </div>
+            <div class="row">
+                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+                    <h2>Reason Behind Yellow Leaf</h2>
+
+                        <ul>
+                            <li>Improper watering</li>
+                            <li>Improper soil pH</li>
+                            <li>Lack of proper nutrients</li>
+                        </ul> 
+                </div>
+                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+                    <h2>Cure</h2>
+
+                        <ul>
+                            <li>water only when soil feel dry</li>
+                            <li>Do soil tests 3 times a month</li>
+                            <li>proper fertilization with trusted, premium plant foods</li>
+                        </ul> 
+                </div> 
+
+
+            </div>
+ 
             <!-- ============================================================== -->
             <!-- footer -->
             {% include 'includes/footer.html' %}
