--- a/Dashboard/templates/history.html
+++ b/Dashboard/templates/history.html
@@ -78,7 +78,7 @@
                             <!-- ============================================================== -->
               				                        <!-- product category  -->
                             <!-- ============================================================== -->
-                            <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+                            <!-- <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
                                 <div class="card">
                                     <h5 class="card-header"> Product Health</h5>
                                     <div class="card-body">
@@ -97,8 +97,8 @@
                                             </span>
                                         </div>
                                     </div>
-                                </div>
-                            </div>
+                                </div> 
+                            </div> -->
                             <!-- ============================================================== -->
                             <!-- end product category  -->
                                    <!-- product sales  -->
@@ -113,14 +113,14 @@
                                                     <option value="2">Monthly</option>
                                                     <option value="3">Yearly</option>
                                                 </select>
-                                            </div> -->
-                                        <h5 class="mb-0"> Crops Growth Rate</h5>
+                                            </div>  -->
+                                        <h5 class="mb-0"> Crops Harvest Rate</h5>
                                     </div>
                                     <div class="card-body">
                                         <div class="ct-chart-product ct-golden-section"></div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> 
                             <!-- ============================================================== -->
                             <!-- end product sales  -->
                             <!-- ============================================================== -->
@@ -210,7 +210,7 @@
                             <!-- ============================================================== -->
                             <!-- new customer  -->
                             <!-- ============================================================== -->
-                            <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
+                            <!-- <div class="col-xl-3 col-lg-3 col-md-6 col-sm-12 col-12">
                                 <div class="card border-3 border-top border-top-primary">
                                     <div class="card-body">
                                         <h5 class="text-muted">Growth rate</h5>
@@ -222,7 +222,7 @@
                                         </div>
                                     </div>
                                 </div>
-                            </div>
+                            </div> -->
                             <!-- ============================================================== -->
                             <!-- end new customer  -->
                             <!-- ============================================================== -->
@@ -255,9 +255,9 @@
                                         <div class="metric-value d-inline-block">
                                             <h1 class="mb-1">1340 KM</h1>
                                         </div>
-                                        <div class="metric-label d-inline-block float-right text-danger font-weight-bold">
+                                        <!-- <div class="metric-label d-inline-block float-right text-danger font-weight-bold">
                                             <span class="icon-circle-small icon-box-xs text-danger bg-danger-light bg-danger-light "><i class="fa fa-fw fa-arrow-down"></i></span><span class="ml-1">4%</span>
-                                        </div>
+                                        </div> -->
                                     </div>
                                 </div>
                             </div>
