--- a/Dashboard/templates/index.html
+++ b/Dashboard/templates/index.html
@@ -203,7 +203,7 @@
                             <!-- ============================================================== -->
                             <!-- end customer acquistion  -->
                             <!-- ============================================================== -->
-                        </div>
+                        <!-- </div> -->
                         <!-- <div class="row"> -->
                             <!-- ============================================================== -->
               				                        <!-- product category  -->
