--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -11,6 +11,8 @@
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
     <link rel="stylesheet" href="../assets/libs/css/style.css">
     <link rel="stylesheet" href="../assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
+    <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
+    
 </head>
 
 <body>
@@ -34,9 +36,6 @@
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
                 <div class="row">
-                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <!-- <h3 class="text-center">Content goes here!</h3> -->
-
                         <div class="col-xl-9 col-lg-12 col-md-6 col-sm-12 col-12">
                             <div class="card">
                                 <h5 class="card-header">Recent Area</h5>
@@ -100,32 +99,75 @@
                                 </div>
                             </div>
                         </div>
-
+                        <div class="card">
+                            <h5 class="card-header">Plants</h5>
+                            <div class="card-body">
+                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+                                    <div class="carousel-inner">
+                                        <div class="carousel-item active">
+                                            <img class="d-block w-100" src="../assets/images/card-img-1.jpg" alt="First slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="../assets/images/card-img-2.jpg" alt="Second slide">
+                                        </div>
+                                        <div class="carousel-item">
+                                            <img class="d-block w-100" src="../assets/images/card-img-3.jpg" alt="Third slide">
+                                        </div>
+                                    </div>
+                                    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                                   <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                         <span class="sr-only">Previous</span>   </a>
+                                    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                                       <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                   <span class="sr-only">Next</span>  </a>
+                                </div>
+                            </div>
+                        </div>
+                        
+                    </div>
+                    <div class="row">
+                        <div class="col-xl-6 col-lg-6 col-md-6 col-sm-12 col-12">
+                            <h2>Disease ID: </h2>
+                            <p id="iddd">1620</p>
+                            <br>
+                            <h2>Disease Name :</h2>
+                            <p id="nameee">Yellow Leaf</p>
+                            <br>
+                            <h2>Symptoms:</h2>
+        
+                                <ul id="items1" class="list-group">
+                                    <li class="list-group-item">yellow spots on leaves</li>
+                                    <li class="list-group-item"></li>
+                                    <li class="list-group-item"></li>
+                                </ul> 
+                            <br>
+                            <h2>Reason Behind the disease :</h2>
+        
+                                <ul id="items2" class="list-group">
+                                    <li class="list-group-item">Improper watering</li>
+                                    <li class="list-group-item">Improper soil pH</li>
+                                    <li class="list-group-item">Lack of proper nutrients</li>
+                                </ul> 
+                        </div>
+                        <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
+                            <h2>Treatment :</h2>
+                                <h3>Chemical Treatment</h3>
+                                    <ul id="items3" class="list-group">
+                                        <li class="list-group-item">water only when soil feel dry</li>
+                                        <li class="list-group-item">Ironite Plus</li>
+                                        <li class="list-group-item">proper fertilization with trusted, premium plant foods</li>
+                                    </ul> 
+                                <h3>Physical Treatment</h3>
+                                    <ul id="items4" class="list-group">
+                                        <li class="list-group-item">water only when soil feel dry</li>
+                                        <li class="list-group-item">Do soil tests 3 times a month</li>
+                                        <li class="list-group-item">proper fertilization with trusted, premium plant foods</li>
+                                    </ul> 
+                        </div> 
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                    <h2>Reason Behind Yellow Leaf</h2>
 
-                        <ul>
-                            <li>Improper watering</li>
-                            <li>Improper soil pH</li>
-                            <li>Lack of proper nutrients</li>
-                        </ul> 
-                </div>
-                <div class="col-xl-3 col-lg-6 col-md-6 col-sm-12 col-12">
-                    <h2>Cure</h2>
-
-                        <ul>
-                            <li>water only when soil feel dry</li>
-                            <li>Do soil tests 3 times a month</li>
-                            <li>proper fertilization with trusted, premium plant foods</li>
-                        </ul> 
-                </div> 
-
-
-            </div>
  
             <!-- ============================================================== -->
             <!-- footer -->
@@ -140,8 +182,10 @@
     <!-- Optional JavaScript -->
     <script src="../assets/vendor/jquery/jquery-3.3.1.min.js"></script>
     <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+    <script src="../assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="../assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="../assets/libs/js/main-js.js"></script>
+    <script src="info.js"></script>
 </body>
  
 </html>
