--- a/Dashboard/templates/includes/sidebar.html
+++ b/Dashboard/templates/includes/sidebar.html
@@ -18,6 +18,9 @@
                         <a class="nav-link" href="/field-operation" aria-expanded="false" data-target="#submenu-2" aria-controls="submenu-2"><i class="fa fa-fw fa-rocket"></i>Field Operation</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/analysis" aria-expanded="false" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-table"></i>Result Generate</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/area-status" aria-expanded="false" data-target="#submenu-3" aria-controls="submenu-3"><i class="fas fa-fw fa-chart-pie"></i>My Area Status</a>
                     </li>
                     <li class="nav-item ">
