--- a/Dashboard/templates/register.html
+++ b/Dashboard/templates/register.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Agro-Drone</title>
+    <title>Registration</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
@@ -20,14 +20,12 @@
     <div class="dashboard-main-wrapper">
          <!-- ============================================================== -->
         <!-- navbar -->
-        {%include 'includes/navbar.html' %}
+        
         <!-- end navbar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- left sidebar -->
-        {% if 2==2 %}
-            {%include 'includes/sidebar.html' %}
-        {% endif %}
+      
         <!-- end left sidebar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
@@ -37,7 +35,7 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                        <h3 class="text-center">Register to Agro-Drone</h3>
                     </div>
                 </div>
             </div>
@@ -71,11 +69,12 @@
             </form>
 
             <!-- ============================================================== -->
-            <!-- footer -->
-            {% include 'includes/footer.html' %}
-            <!-- end footer -->
+            
             <!-- ============================================================== -->
         </div>
+        <!-- footer -->
+        {% include 'includes/footer.html' %}
+        <!-- end footer -->
     </div>
     <!-- ============================================================== -->
     <!-- end main wrapper -->
