login register merged

--- a/Dashboard/templates/area_status.html
+++ b/Dashboard/templates/area_status.html
@@ -80,7 +80,7 @@
                         
 
                           <!--form inputs-->
-                          <form class="splash-container" action="/get_status" method="POST">
+                          <!-- <form class="splash-container" action="/get_status" method="POST">
                             <div class="card">
                                 <div class="card-header">
                                     <h3 class="mb-1">Recent Area</h3>
@@ -112,12 +112,12 @@
                                 </div>
                                 
                             </div>
-                        </form>
+                        </form> -->
                         
 
                        
 
-                        <div class="card">
+                        <!-- <div class="card">
                             <h5 class="card-header">Plants</h5>
                             <div class="card-body">
                                 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
@@ -142,7 +142,9 @@
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="sr-only">Next</span> </a>
                             </div>
-                        </div>
+                        </div> -->
+
+                        
                     </div>
 
                 </div>
