--- a/Dashboard/templates/register.html
+++ b/Dashboard/templates/register.html
@@ -5,7 +5,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Agro-Drone</title>
+    <title>Registration</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="../assets/vendor/bootstrap/css/bootstrap.min.css">
     <link href="../assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
@@ -20,14 +20,12 @@
     <div class="dashboard-main-wrapper">
          <!-- ============================================================== -->
         <!-- navbar -->
-        {%include 'includes/navbar.html' %}
+        
         <!-- end navbar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
         <!-- left sidebar -->
-        {% if 2==2 %}
-            {%include 'includes/sidebar.html' %}
-        {% endif %}
+      
         <!-- end left sidebar -->
         <!-- ============================================================== -->
         <!-- ============================================================== -->
@@ -37,11 +35,11 @@
             <div class="container-fluid dashboard-content">
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-                        <h3 class="text-center">Content goes here!</h3>
+                        <h3 class="text-center">Register to Agro-Drone</h3>
                     </div>
                 </div>
             </div>
-            <form class="splash-container" action="/registerUser" method="POST">
+            <form class="splash-container" action="/register" method="POST">
                 <div class="card">
                     <div class="card-header">
                         <h3 class="mb-1">Registration</h3>
@@ -50,17 +48,18 @@
                         <div class="form-group">
                             <input class="form-control form-control-lg" type="text" name="name" required="" placeholder="Name" autocomplete="off">
                         </div>
-                        <!-- <div class="form-group">
+                        <div class="form-group">
                             <input class="form-control form-control-lg" type="email" name="email" required="" placeholder="E-mail" autocomplete="off">
-                        </div> -->
+                        </div>
+                        <div class="form-group">
+                            <input class="form-control form-control-lg" type="number" name="govtid" required="" placeholder="ID" autocomplete="off">
+                        </div>
                         <div class="form-group">
                             <input class="form-control form-control-lg" id="pass1" name="password" type="password" required="" placeholder="Password">
                         </div>
+                        
                         <div class="form-group">
-                            <input class="form-control form-control-lg" type="password" required="" name="confirm_password" placeholder="Confirm">
-                        </div>
-                        <div class="form-group pt-2">
-                            <button class="btn btn-block btn-primary" type="submit">Register Account</button>
+                            <input type="submit" class="btn btn-block btn-primary" value="Register Account">
                         </div>
                     </div>
                     <div class="card-footer bg-white">
@@ -70,11 +69,12 @@
             </form>
 
             <!-- ============================================================== -->
-            <!-- footer -->
-            {% include 'includes/footer.html' %}
-            <!-- end footer -->
+            
             <!-- ============================================================== -->
         </div>
+        <!-- footer -->
+        {% include 'includes/footer.html' %}
+        <!-- end footer -->
     </div>
     <!-- ============================================================== -->
     <!-- end main wrapper -->
